extends Control

func _on_status_pressed() -> void:
	pass # Replace with function body.


func _on_orders_pressed() -> void:
	pass # Replace with function body.


func _on_recipes_pressed() -> void:
	pass # Replace with function body.


func _on_shop_pressed() -> void:
	pass # Replace with function body.


func _on_collecting_pressed() -> void:
	pass # Replace with function body.


func _on_quit_pressed() -> void:
	get_tree().quit() # Replace with function body.
